Update TextComparer.java